<?php

namespace Web;

interface Controller
{
    public function getRouteMap(): array;
}
